Modified Game Over screen and ship appearance